Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12636

QImage load error on tiff tiled with lzw compression

XMLWordPrintable

      Got an error (foo: Can not read scanlines from a tiled image) when trying to load a tiff tiled indexed color image width lzw compression. This only hapens with indexed color files (pl. see attached image), not with RGB color.
      Used a work around by creating an untiled and uncompressed temporary file with a system call to "tiffcp.exe" from libtiff library tools.
      However, this is a not acceptable consuming time task.

        1. 200905.tif
          1.02 MB
        2. example.tar.gz
          2.68 MB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            hferbot Henrique Ferreira Botelho
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes