Add support for tiled, color indexed tiff files

For color index images, the tiff handler uses scanline based
reading. The tiff decoder does not support that if the image is stored
in tiled format. This commit adds tile based reading for such cases.

[ChangeLog][TIFF] Added support for tiled, color indexed tiff files

Task-number: QTBUG-12636
Change-Id: Ic759903c75c8252267429f01e3dd9706fc516f8f
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>